Создана разметка без классов

--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -1,6 +1,71 @@
 <section class="locations">
   <div class="container">
-    <h2 class="visually-hidden"></h2>
+    <h2 class="visually-hidden">Найдите нас</h2>
+    <div class="locations-card">
+      <ul>
+        <li>
+          <span></span>
+          <h3></h3>
+          <p></p>
+          <ul>
+            <li>
+              <h3></h3>
+              <p></p>
+            </li>
+            <li>
+              <h3></h3>
+              <p></p>
+            </li>
+          </ul>
+          <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+          </ul>
+        </li>
+        <li>
+          <span></span>
+          <h3></h3>
+          <p></p>
+          <ul>
+            <li>
+              <h3></h3>
+              <p></p>
+            </li>
+            <li>
+              <h3></h3>
+              <p></p>
+            </li>
+          </ul>
+          <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+          </ul>
+        </li>
+        <li>
+          <span></span>
+          <h3></h3>
+          <p></p>
+          <ul>
+            <li>
+              <h3></h3>
+              <p></p>
+            </li>
+            <li>
+              <h3></h3>
+              <p></p>
+            </li>
+          </ul>
+          <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <div class="location-button-group">
+      <button type="button" class="locatin-button"></button>
+      <button type="button" class="location-button location-franchise"></button>
+    </div>
     <!-- Ваш код здесь -->
   </div>
 </section>
