--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -2,38 +2,21 @@
   <div class="container">
     <h2 class="visually-hidden">Найдите нас</h2>
     <div class="locations-card">
-      <ul>
-        <li>
-          <span></span>
-          <h3></h3>
-          <p></p>
+      <ul class="locations-card-list">
+        <li class="locations-card-item">
+          <span class="locations-restaurant">CAFE</span>
+          <h3 class="locations-city">Chicago</h3>
+          <p class="locations-description">
+            Fusce ut velit laoreet, tempus arcu molestie vulputate
+          </p>
           <ul>
             <li>
-              <h3></h3>
-              <p></p>
+              <h3 class="locations-weekdays">Monday - Friday</h3>
+              <time class="locations-weekdays-time">06:00 AM - 10:00 PM</time>
             </li>
             <li>
-              <h3></h3>
-              <p></p>
-            </li>
-          </ul>
-          <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-          </ul>
-        </li>
-        <li>
-          <span></span>
-          <h3></h3>
-          <p></p>
-          <ul>
-            <li>
-              <h3></h3>
-              <p></p>
-            </li>
-            <li>
-              <h3></h3>
-              <p></p>
+              <h3 class="locations-weekend">Saturday - Sunday</h3>
+              <time class="locations-weekend-time"></time>
             </li>
           </ul>
           <ul>
@@ -41,18 +24,41 @@
             <li><a href=""></a></li>
           </ul>
         </li>
-        <li>
-          <span></span>
-          <h3></h3>
-          <p></p>
+        <li class="locations-card-item">
+          <span class="locations-restaurant locations-ftruck">FOOD TRUCK</span>
+          <h3 class="locations-city">Los Angeles</h3>
+          <p class="locations-description">
+            Fusce ut velit laoreet, tempus arcu molestie vulputate
+          </p>
           <ul>
             <li>
-              <h3></h3>
-              <p></p>
+              <h3 class="locations-weekdays">Monday - Friday</h3>
+              <time class="locations-weekdays-time">06:00 AM - 10:00 PM</time>
             </li>
             <li>
-              <h3></h3>
-              <p></p>
+              <h3 class="locations-weekend">Saturday - Sunday</h3>
+              <time class="locations-weekend-time"></time>
+            </li>
+          </ul>
+          <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+          </ul>
+        </li>
+        <li class="locations-card-item">
+          <span class="locations-restaurant">CAFE</span>
+          <h3 class="locations-city">New York</h3>
+          <p class="locations-description">
+            Fusce ut velit laoreet, tempus arcu molestie vulputate
+          </p>
+          <ul>
+            <li>
+              <h3 class="locations-weekdays">Monday - Friday</h3>
+              <time class="locations-weekdays-time">06:00 AM - 10:00 PM</time>
+            </li>
+            <li>
+              <h3 class="locations-weekend">Saturday - Sunday</h3>
+              <time class="locations-weekend-time"></time>
             </li>
           </ul>
           <ul>
@@ -62,9 +68,12 @@
         </li>
       </ul>
     </div>
-    <div class="location-button-group">
+    <div class="locations-button-group">
       <button type="button" class="locatin-button"></button>
-      <button type="button" class="location-button location-franchise"></button>
+      <button
+        type="button"
+        class="locations-button locations-franchise"
+      ></button>
     </div>
     <!-- Ваш код здесь -->
   </div>
