--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -11,17 +11,17 @@
           </p>
           <ul>
             <li>
-              <h3 class="locations-weekdays">Monday - Friday</h3>
-              <time class="locations-weekdays-time">06:00 AM - 10:00 PM</time>
+              <h3 class="locations-workdays">Monday - Friday</h3>
+              <time class="locations-worktime">06:00 AM - 10:00 PM</time>
             </li>
             <li>
-              <h3 class="locations-weekend">Saturday - Sunday</h3>
-              <time class="locations-weekend-time"></time>
+              <h3 class="locations-workdays">Saturday - Sunday</h3>
+              <time class="locations-worktime">08:00 AM - 16:00 PM</time>
             </li>
           </ul>
           <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="tel:+61(0)383766284">+61(0) 383 766 284 </a></li>
+            <li><a href="mailto:noreply@envato.com">noreply@envato.com</a></li>
           </ul>
         </li>
         <li class="locations-card-item">
@@ -32,17 +32,17 @@
           </p>
           <ul>
             <li>
-              <h3 class="locations-weekdays">Monday - Friday</h3>
-              <time class="locations-weekdays-time">06:00 AM - 10:00 PM</time>
+              <h3 class="locations-workdays">Monday - Friday</h3>
+              <time class="locations-worktime">06:00 AM - 10:00 PM</time>
             </li>
             <li>
-              <h3 class="locations-weekend">Saturday - Sunday</h3>
-              <time class="locations-weekend-time"></time>
+              <h3 class="locations-workdays">Saturday - Sunday</h3>
+              <time class="locations-worktime">08:00 AM - 16:00 PM</time>
             </li>
           </ul>
           <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="tel:+61(0)383766284">+61(0) 383 766 284 </a></li>
+            <li><a href="mailto:noreply@envato.com">noreply@envato.com</a></li>
           </ul>
         </li>
         <li class="locations-card-item">
@@ -53,17 +53,17 @@
           </p>
           <ul>
             <li>
-              <h3 class="locations-weekdays">Monday - Friday</h3>
-              <time class="locations-weekdays-time">06:00 AM - 10:00 PM</time>
+              <h3 class="locations-workdays">Monday - Friday</h3>
+              <time class="locations-worktime">06:00 AM - 10:00 PM</time>
             </li>
             <li>
-              <h3 class="locations-weekend">Saturday - Sunday</h3>
-              <time class="locations-weekend-time"></time>
+              <h3 class="locations-workdays">Saturday - Sunday</h3>
+              <time class="locations-worktime">08:00 AM - 16:00 PM</time>
             </li>
           </ul>
           <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="tel:+61(0)383766284">+61(0) 383 766 284 </a></li>
+            <li><a href="mailto:noreply@envato.com">noreply@envato.com</a></li>
           </ul>
         </li>
       </ul>
