--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -5,7 +5,7 @@
       <ul class="locations-card-list">
         <li class="locations-card-item">
           <span class="locations-restaurant">CAFE</span>
-          <h3 class="locations-city">Chicago</h3>
+          <h3 class="locations-title">Chicago</h3>
           <p class="locations-description">
             Fusce ut velit laoreet, tempus arcu molestie vulputate
           </p>
@@ -26,7 +26,7 @@
         </li>
         <li class="locations-card-item">
           <span class="locations-restaurant locations-ftruck">FOOD TRUCK</span>
-          <h3 class="locations-city">Los Angeles</h3>
+          <h3 class="locations-title">Los Angeles</h3>
           <p class="locations-description">
             Fusce ut velit laoreet, tempus arcu molestie vulputate
           </p>
@@ -47,7 +47,7 @@
         </li>
         <li class="locations-card-item">
           <span class="locations-restaurant">CAFE</span>
-          <h3 class="locations-city">New York</h3>
+          <h3 class="locations-title">New York</h3>
           <p class="locations-description">
             Fusce ut velit laoreet, tempus arcu molestie vulputate
           </p>
