--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -9,7 +9,7 @@
           <p class="locations-description">
             Fusce ut velit laoreet, tempus arcu molestie vulputate
           </p>
-          <ul>
+          <ul class="locations-work-list">
             <li>
               <h3 class="locations-workdays">Monday - Friday</h3>
               <time class="locations-worktime">06:00 AM - 10:00 PM</time>
@@ -19,7 +19,7 @@
               <time class="locations-worktime">08:00 AM - 16:00 PM</time>
             </li>
           </ul>
-          <ul>
+          <ul class="locations-contact-list">
             <li><a href="tel:+61(0)383766284">+61(0) 383 766 284 </a></li>
             <li><a href="mailto:noreply@envato.com">noreply@envato.com</a></li>
           </ul>
@@ -30,7 +30,7 @@
           <p class="locations-description">
             Fusce ut velit laoreet, tempus arcu molestie vulputate
           </p>
-          <ul>
+          <ul class="locations-work-list">
             <li>
               <h3 class="locations-workdays">Monday - Friday</h3>
               <time class="locations-worktime">06:00 AM - 10:00 PM</time>
@@ -40,7 +40,7 @@
               <time class="locations-worktime">08:00 AM - 16:00 PM</time>
             </li>
           </ul>
-          <ul>
+          <ul class="locations-contact-list">
             <li><a href="tel:+61(0)383766284">+61(0) 383 766 284 </a></li>
             <li><a href="mailto:noreply@envato.com">noreply@envato.com</a></li>
           </ul>
@@ -51,7 +51,7 @@
           <p class="locations-description">
             Fusce ut velit laoreet, tempus arcu molestie vulputate
           </p>
-          <ul>
+          <ul class="locations-work-list">
             <li>
               <h3 class="locations-workdays">Monday - Friday</h3>
               <time class="locations-worktime">06:00 AM - 10:00 PM</time>
@@ -61,7 +61,7 @@
               <time class="locations-worktime">08:00 AM - 16:00 PM</time>
             </li>
           </ul>
-          <ul>
+          <ul class="locations-contact-list">
             <li><a href="tel:+61(0)383766284">+61(0) 383 766 284 </a></li>
             <li><a href="mailto:noreply@envato.com">noreply@envato.com</a></li>
           </ul>
