Не закончил кнопки

--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -69,11 +69,10 @@
       </ul>
     </div>
     <div class="locations-button-group">
-      <button type="button" class="locatin-button"></button>
-      <button
-        type="button"
-        class="locations-button locations-franchise"
-      ></button>
+      <button type="button" class="locations-button">Our Locations</button>
+      <button type="button" class="locations-button locations-franchise">
+        Franchise
+      </button>
     </div>
     <!-- Ваш код здесь -->
   </div>
