--- a/src/partials/comments.html
+++ b/src/partials/comments.html
@@ -1,15 +1,198 @@
 <section class="comments">
   <div class="container">
+
+    <div class="comments-container">
     <h2 class="visually-hidden"></h2>
     <!-- Ваш код здесь -->
     <div class="comments-slider">
-      <div></div>
-      <!-- your content -->
-      <div></div>
-      <!-- your content -->
-      <div></div>
-      <!-- your content -->
+      <div class="comment-slider-1">
+       <div class="zaglushka-foto"></div>
+        <!-- <picture class="comments-foto">
+        
+                <source srcset="../images/comments/testimonials-1.jpg 1x, 
+                              ../images/comments/testimonials-1@2x.jpg 2x"  />
+                <img  src="../images/comments/testimonials-1.jpg"
+                 width="85" height="85" alt="Foto Emily"/>
+              </picture>  -->
+          <!-- <img src="../images/comments-foto1.jpg" width="85" height="85" alt="Foto Emily" /> -->
+
+        <!-- your content -->
+        <div class="comment-text-container">
+        
+          <div class="comment-text">
+        
+            <div class="comment-text-mobile">
+              <span class="comment-dekorline">Nullam viverra</span>
+              <span class="comment-dekorline">consectetuer. Quisque</span>
+              <span class="comment-dekorline">cursus et, porttitor risus.</span>
+              <span class="comment-dekorline">Aliquam sem. In hendrerit</span>
+              <span class="comment-dekorline">nulla quam nunc,</span>
+              <span class="comment-dekorline">accumsan congue. Lorem</span>
+              <span class="comment-dekorline">ipsum primis in nibh vel</span>
+              <span class="comment-dekorline">risus.</span>
+            </div>
+        
+            <div class="comment-text-tablet">
+              <span class="comment-dekorline">Nullam viverra consectetuer. Quisque cursus et, porttitor risus.</span>
+              <span class="comment-dekorline"> Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.</span>
+              <span class="comment-dekorline">Lorem ipsum primis in nibh vel risus.</span>
+            </div>
+        
+            <div class="comment-text-desktop">
+              <span class="comment-dekorline">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+                hendrerit </span>
+              <span class="comment-dekorline">nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</span>
+            </div>
+        
+            <span class="comment-dekor"></span>
+          </div>
+        
+        </div>
+        <!-- your content -->
+        <div class="comment-dots">
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </div>
+        <!-- your content -->
+        <div class="comment-local">Emily, Los Angeles</div>
+        <div class="slider-dots">
+          <div class="zaglushka-home"></div>
+            <!-- <svg class="comment-icon-home">
+                <use href="../images/"></use> <a href="../images/svg/sprite.svg#icon-home"></a>
+            </svg> -->
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </div>
+     
+
     </div>
+
+    <div class="comment-slider-2">
+      <div class="zaglushka-foto"></div>
+      <!-- <picture class="comments-foto">
+            
+                    <source srcset="../images/comments/testimonials-2.jpg 1x, 
+                                  ../images/comments/testimonials-2@2x.jpg 2x"  />
+                    <img  src="../images/comments/testimonials-2.jpg"
+                     width="85" height="85" alt="Foto Emily"/>
+                  </picture>  -->
+      <!-- <img src="../images/comments-foto2.jpg" width="85" height="85" alt="Foto Emily" /> -->
+    
+      <!-- your content -->
+      <div class="comment-text-container">
+    
+        <div class="comment-text">
+    
+          <div class="comment-text-mobile">
+            <span class="comment-dekorline">Nullam viverra</span>
+            <span class="comment-dekorline">consectetuer. Quisque</span>
+            <span class="comment-dekorline">cursus et, porttitor risus.</span>
+            <span class="comment-dekorline">Aliquam sem. In hendrerit</span>
+            <span class="comment-dekorline">nulla quam nunc,</span>
+            <span class="comment-dekorline">accumsan congue. Lorem</span>
+            <span class="comment-dekorline">ipsum primis in nibh vel</span>
+            <span class="comment-dekorline">risus.</span>
+          </div>
+    
+          <div class="comment-text-tablet">
+            <span class="comment-dekorline">Nullam viverra consectetuer. Quisque cursus et, porttitor risus.</span>
+            <span class="comment-dekorline"> Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.</span>
+            <span class="comment-dekorline">Lorem ipsum primis in nibh vel risus.</span>
+          </div>
+    
+          <div class="comment-text-desktop">
+            <span class="comment-dekorline">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+              hendrerit </span>
+            <span class="comment-dekorline">nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</span>
+          </div>
+    
+          <span class="comment-dekor"></span>
+        </div>
+    
+      </div>
+      <!-- your content -->
+      <div class="comment-dots">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
+      <!-- your content -->
+      <div class="comment-local">Emily, Los Angeles</div>
+      <div class="slider-dots">
+        <div class="zaglushka-home"></div>
+        <!-- <svg class="comment-icon-home">
+                    <use href="../images/"></use> <a href="../images/svg/sprite.svg#icon-home"></a>
+                </svg> -->
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
+    
+    
+    </div>
+    <div class="comment-slider-3">
+      <div class="zaglushka-foto"></div>
+      <!-- <picture class="comments-foto">
+            
+                    <source srcset="../images/comments/testimonials-3.jpg 1x, 
+                                  ../images/comments/testimonials-3@2x.jpg 2x"  />
+                    <img  src="../images/comments/testimonials-3.jpg"
+                     width="85" height="85" alt="Foto Emily"/>
+                  </picture>  -->
+      <!-- <img src="../images/comments-foto3.jpg" width="85" height="85" alt="Foto Emily" /> -->
+    
+      <!-- your content -->
+      <div class="comment-text-container">
+    
+        <div class="comment-text">
+    
+          <div class="comment-text-mobile">
+            <span class="comment-dekorline">Nullam viverra</span>
+            <span class="comment-dekorline">consectetuer. Quisque</span>
+            <span class="comment-dekorline">cursus et, porttitor risus.</span>
+            <span class="comment-dekorline">Aliquam sem. In hendrerit</span>
+            <span class="comment-dekorline">nulla quam nunc,</span>
+            <span class="comment-dekorline">accumsan congue. Lorem</span>
+            <span class="comment-dekorline">ipsum primis in nibh vel</span>
+            <span class="comment-dekorline">risus.</span>
+          </div>
+    
+          <div class="comment-text-tablet">
+            <span class="comment-dekorline">Nullam viverra consectetuer. Quisque cursus et, porttitor risus.</span>
+            <span class="comment-dekorline"> Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.</span>
+            <span class="comment-dekorline">Lorem ipsum primis in nibh vel risus.</span>
+          </div>
+    
+          <div class="comment-text-desktop">
+            <span class="comment-dekorline">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+              hendrerit </span>
+            <span class="comment-dekorline">nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</span>
+          </div>
+    
+          <span class="comment-dekor"></span>
+        </div>
+    
+      </div>
+      <!-- your content -->
+      <div class="comment-dots">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
+      <!-- your content -->
+      <div class="comment-local">Emily, Los Angeles</div>
+      <div class="slider-dots">
+        <div class="zaglushka-home"></div>
+        <!-- <svg class="comment-icon-home">
+                    <use href="../images/"></use> <a href="../images/svg/sprite.svg#icon-home"></a>
+                </svg> -->
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
+    
+    
+    </div>
+    
   </div>
 </section>
 
