--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -12,6 +12,7 @@ p {
 }
 .locations {
   background-color: $secondary-bg-color;
+  padding-bottom: 113px;
 }
 
 .container {
@@ -73,10 +74,11 @@ p {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: $alternate-text-color;
 
   border-bottom: 1px solid $primary-decor-color;
-  padding-bottom: 25px;
+  padding-bottom: 24px;
   margin-bottom: 25px;
 }
 
@@ -94,7 +96,7 @@ p {
 
 .locations-work-list {
   border-bottom: 1px solid $primary-decor-color;
-  padding-bottom: 25px;
+  padding-bottom: 24px;
   margin-bottom: 25px;
 }
 
@@ -114,6 +116,7 @@ p {
 
 .locations-button-group {
   text-align: center;
+  margin-top: 54px;
 }
 
 .locations-button {
@@ -129,6 +132,9 @@ p {
 
   width: 161.45px;
   height: 44px;
+
+  margin-left: auto;
+  margin-right: auto;
 
   background-color: $primary-accent-color;
   border-radius: 22px;
