--- a/src/partials/site-nav.html
+++ b/src/partials/site-nav.html
@@ -3,13 +3,13 @@
     <div class="container-site-nav">
       <img class="logo" src="../src/images/site-nav/logo.png">
       <ul class="site-nav-list">
-        <li class="site-nav-item"><a href="" class="link link-site-nav">Home</a></li>
-        <li class="site-nav-item"><a href="" class="link link-site-nav">About us</a></li>
-        <li class="site-nav-item"><a href="" class="link link-site-nav">How it’s made?</a></li>
-        <li class="site-nav-item"><a href="" class="link link-site-nav">Our products</a></li>
-        <li class="site-nav-item"><a href="" class="link link-site-nav">Contact</a></li>
+        <li class="site-nav-item"><a href="#home" class="link link-site-nav">Home</a></li>
+        <li class="site-nav-item"><a href="#about-us" class="link link-site-nav">About us</a></li>
+        <li class="site-nav-item"><a href="how-it’s-made" class="link link-site-nav">How it’s made?</a></li>
+        <li class="site-nav-item"><a href="#our-products" class="link link-site-nav">Our products</a></li>
+        <li class="site-nav-item"><a href="#contact" class="link link-site-nav">Contact</a></li>
       </ul>
-      <button class="btn-site-nav burger-menu"   data-menu-button> <span></span> </button>
+      <button class="btn-site-nav burger-menu" data-modal-open> <span></span> </button>
       <button class="container-btn-site-nav btn-site-nav-desktop btn-site-nav">
         <span class="">
           Buy now
@@ -18,8 +18,8 @@
           <use href="../src/images/svg/sprite.svg#icon-bracket-right"></use>
         </svg>
       </button>
-      <div class="mobile-nav">
-        <button class="btn-site-nav close-btn-site-nav">
+      <div class="mobile-nav is-hiden" data-modal>
+        <button class="btn-site-nav close-btn-site-nav" data-modal-close>
           <svg width="17" height="17">
             <use href="../src/images/svg/sprite.svg#icon-close-cross"></use>
           </svg>
@@ -33,11 +33,11 @@
           </svg>
         </button>
         <ul class="mobile-nav-list" data-menu>
-          <li class="site-nav-item"><a href="" class="link link-mobile-site-nav">Home</a></li>
-          <li class="site-nav-item"><a href="" class="link link-mobile-site-nav">About us</a></li>
-          <li class="site-nav-item"><a href="" class="link link-mobile-site-nav">How it’s made?</a></li>
-          <li class="site-nav-item"><a href="" class="link link-mobile-site-nav">Our products</a></li>
-          <li class="site-nav-item"><a href="" class="link link-mobile-site-nav">Contact</a></li>
+          <li class="site-nav-item"><a href="#home" class="link link-mobile-site-nav">Home</a></li>
+          <li class="site-nav-item"><a href="#about-us" class="link link-mobile-site-nav">About us</a></li>
+          <li class="site-nav-item"><a href="how-it’s-made" class="link link-mobile-site-nav">How it’s made?</a></li>
+          <li class="site-nav-item"><a href="our-product" class="link link-mobile-site-nav">Our products</a></li>
+          <li class="site-nav-item"><a href="contact" class="link link-mobile-site-nav">Contact</a></li>
         </ul>
       </div>
     </div>
