--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -25,7 +25,7 @@
           </ul>
         </li>
         <li class="locations-card-item">
-          <span class="locations-restaurant locations-ftruck">FOOD TRUCK</span>
+          <span class="locations-restaurant locations-ftruck">FOODTRUCK</span>
           <h3 class="locations-title">Los Angeles</h3>
           <p class="locations-description">
             Fusce ut velit laoreet, tempus arcu molestie vulputate
@@ -69,9 +69,17 @@
       </ul>
     </div>
     <div class="locations-button-group">
-      <button type="button" class="locations-button">Our Locations</button>
+      <button type="button" class="locations-button">
+        Our Locations
+        <svg class="location-button-icon">
+          <use href="./images/svg/sprite.svg#icon-bracket-right"></use>
+        </svg>
+      </button>
       <button type="button" class="locations-button locations-franchise">
         Franchise
+        <svg class="location-button-icon location-button-iconfr">
+          <use href="./images/svg/sprite.svg#icon-bracket-right"></use>
+        </svg>
       </button>
     </div>
     <!-- Ваш код здесь -->
