--- a/src/sass/_comments.scss
+++ b/src/sass/_comments.scss
@@ -115,8 +115,8 @@ width: 813px;
   height: 40px;
 
   // background-image: url("../images/svg/slick-bg.svg");
-  background-image: url("../images/comments-decor.svg");
-  fill: $primary-decor-color;
+
+    fill: $primary-decor-color;
   background-repeat: no-repeat;
   background-size: contain;
 
@@ -182,28 +182,28 @@ width: 813px;
 }
 
 
-.slider-dots {
-    display: flex;
-    justify-content: center;
+// .slider-dots {
+//     display: flex;
+//     justify-content: center;
   
-  & .comment-icon-home {
-    width: 12.4px;
-    height: 12px;
-    fill: $home-decor-color;
-  }
+//   & .comment-icon-home {
+//     width: 12.4px;
+//     height: 12px;
+//     fill: $home-decor-color;
+//   }
 
-    & .dot {
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-     background-color: $largecircle-decor-color;  
+//     & .dot {
+//     width: 12px;
+//     height: 12px;
+//     border-radius: 50%;
+//      background-color: $largecircle-decor-color;  
 
   
- }
-    & .dot {
-        margin-left: 18px;
-    }
-}
+//  }
+//     & .dot {
+//         margin-left: 18px;
+//     }
+// }
 
  .comment-local {
     margin-top: 15px;
