--- a/src/partials/comments.html
+++ b/src/partials/comments.html
@@ -57,10 +57,12 @@
         <!-- your content -->
         <div class="comment-local">Emily, Los Angeles</div>
         <div class="slider-dots">
-          <div class="zaglushka-home"></div>
-            <!-- <svg class="comment-icon-home">
-                <use href="../images/"></use> <a href="../images/svg/sprite.svg#icon-home"></a>
-            </svg> -->
+        
+          <!-- <div class="zaglushka-home"></div> -->
+        
+          <!-- <svg class="comment-icon-home">
+                            <use href="../images/svg/sprite.svg#icon-home"></use>
+                        </svg> -->
           <div class="dot"></div>
           <div class="dot"></div>
         </div>
@@ -120,9 +122,11 @@
       <!-- your content -->
       <div class="comment-local">Emily, Los Angeles</div>
       <div class="slider-dots">
-        <div class="zaglushka-home"></div>
+
+        <!-- <div class="zaglushka-home"></div> -->
+
         <!-- <svg class="comment-icon-home">
-                    <use href="../images/"></use> <a href="../images/svg/sprite.svg#icon-home"></a>
+                    <use href="../images/svg/sprite.svg#icon-home"></use>
                 </svg> -->
         <div class="dot"></div>
         <div class="dot"></div>
@@ -182,17 +186,20 @@
       <!-- your content -->
       <div class="comment-local">Emily, Los Angeles</div>
       <div class="slider-dots">
-        <div class="zaglushka-home"></div>
+      
+        <!-- <div class="zaglushka-home"></div> -->
+      
         <!-- <svg class="comment-icon-home">
-                    <use href="../images/"></use> <a href="../images/svg/sprite.svg#icon-home"></a>
-                </svg> -->
+                          <use href="../images/svg/sprite.svg#icon-home"></use>
+                      </svg> -->
         <div class="dot"></div>
         <div class="dot"></div>
       </div>
     
     
     </div>
-    
+  </div>
+  </div>
   </div>
 </section>
 
